--- a/index.html
+++ b/index.html
@@ -6,168 +6,8 @@
   <title>Personal Portfolio</title>
   <meta name="description" content="A clean, responsive personal portfolio built with pure HTML, CSS, and JavaScript." />
   <meta name="theme-color" content="#0ea5e9" />
-  <style>
-    /* -----------------------------
-       Base + Theme Variables
-    ------------------------------*/
-    :root{
-      --bg: #ffffff;
-      --bg-elev: #f8fafc;
-      --text: #0f172a;
-      --muted: #475569;
-      --primary: #0ea5e9; /* sky-500 */
-      --primary-600: #0284c7;
-      --accent: #22c55e;  /* green-500 */
-      --card: #ffffff;
-      --border: #e2e8f0;
-      --shadow: 0 10px 18px rgba(2,8,23,0.08);
-      --radius: 16px;
-    }
-    html[data-theme="dark"]{
-      --bg: #0b1220;
-      --bg-elev: #0f172a;
-      --text: #e2e8f0;
-      --muted: #a7b0be;
-      --primary: #38bdf8; /* sky-400 */
-      --primary-600: #0ea5e9;
-      --accent: #34d399;
-      --card: #0b1220;
-      --border: #1f2937;
-      --shadow: 0 10px 18px rgba(0,0,0,0.35);
-    }
-    @media (prefers-color-scheme: dark){
-      html[data-theme="auto"]{ color-scheme: dark light; }
-    }
-
-    /* -----------------------------
-       Reset + Typography
-    ------------------------------*/
-    * { box-sizing: border-box; }
-    html { scroll-behavior: smooth; }
-    body{
-      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-    }
-    h1,h2,h3{ line-height:1.2; margin:0 0 .6rem; }
-    h1{ font-size: clamp(2rem, 1.2rem + 3vw, 3.4rem); }
-    h2{ font-size: clamp(1.4rem, 1rem + 1.5vw, 2rem); }
-    p{ margin: 0 0 1rem; color: var(--muted); }
-    a{ color: var(--primary); text-decoration: none; }
-    a:hover{ text-decoration: underline; }
-
-    /* -----------------------------
-       Layout Helpers
-    ------------------------------*/
-    .container{ max-width: 1100px; margin-inline: auto; padding: 0 1rem; }
-    .section{ padding: 4rem 0; }
-    .grid{ display: grid; gap: 1.25rem; }
-
-    /* -----------------------------
-       Header + Nav
-    ------------------------------*/
-    header{
-      position: sticky; top:0; z-index: 50;
-      background: rgba(255,255,255,0.75);
-      backdrop-filter: saturate(180%) blur(10px);
-      border-bottom: 1px solid var(--border);
-    }
-    html[data-theme="dark"] header{ background: rgba(11,18,32,0.65); }
-
-    .nav{ display:flex; align-items:center; justify-content:space-between; height:64px; }
-    .brand{ display:flex; align-items:center; gap:.6rem; font-weight:700; letter-spacing:.3px; }
-    .brand .logo{ width:30px; height:30px; border-radius:50%; background: linear-gradient(135deg, var(--primary), var(--accent)); box-shadow: var(--shadow); }
-
-    .links{ display:flex; gap:1rem; align-items:center; }
-    .links a{ padding:.4rem .6rem; border-radius:10px; }
-    .links a:hover{ background: var(--bg-elev); text-decoration:none; }
-
-    .nav-actions{ display:flex; gap:.5rem; align-items:center; }
-
-    .btn{
-      display:inline-flex; align-items:center; justify-content:center; gap:.5rem;
-      padding:.55rem .9rem; border-radius: 999px; border: 1px solid var(--border);
-      background: var(--card); color: var(--text); box-shadow: var(--shadow);
-    }
-    .btn.primary{ background: var(--primary); color: white; border-color: transparent; }
-    .btn.primary:hover{ background: var(--primary-600); }
-
-    .hamburger{ display:none; width:40px; height:40px; border-radius:10px; border:1px solid var(--border); background:var(--card); align-items:center; justify-content:center; }
-    .hamburger svg{ width:22px; height:22px; }
-
-    @media (max-width:860px){
-      .links{ display:none; position:absolute; top:64px; left:0; right:0; padding: .75rem 1rem; background: var(--bg); border-bottom:1px solid var(--border); }
-      html[data-theme="dark"] .links{ background: var(--bg-elev); }
-      .links.open{ display:flex; flex-direction:column; }
-      .hamburger{ display:flex; }
-    }
-
-    /* -----------------------------
-       Zareen Khan
-    ------------------------------*/
-    .hero{ display:grid; grid-template-columns: 1.2fr .8fr; align-items:center; gap:2rem; padding: 3rem 0 2rem; }
-    .hero .badge{ display:inline-flex; gap:.5rem; align-items:center; padding:.3rem .6rem; border:1px solid var(--border); border-radius:999px; background:var(--card); color: var(--muted); font-size:.9rem; }
-    .hero .cta{ display:flex; gap:.75rem; margin-top:1.2rem; flex-wrap: wrap; }
-    .hero-visual{ aspect-ratio: 1 / 1; border-radius: var(--radius); background: radial-gradient(1200px 600px at 10% 20%, rgba(14,165,233,0.25), transparent),
-                  linear-gradient(135deg, rgba(34,197,94,0.18), rgba(14,165,233,0.18));
-                  border:1px solid var(--border); box-shadow: var(--shadow); display:grid; place-items:center; }
-    .hero-visual .ring{ width:60%; aspect-ratio:1/1; border-radius:50%; border:2px dashed var(--primary); display:grid; place-items:center; animation: spin 20s linear infinite; }
-    .hero-visual .dot{ width:16px; height:16px; border-radius:50%; background: var(--primary); box-shadow: 0 0 0 10px rgba(14,165,233,.15); }
-    @keyframes spin{ from{ transform: rotate(0)} to{ transform: rotate(360deg)} }
-
-    @media (max-width:860px){ .hero{ grid-template-columns: 1fr; } }
-
-    /* -----------------------------
-       Cards + Tags
-    ------------------------------*/
-    .card{ background: var(--card); border:1px solid var(--border); border-radius: var(--radius); box-shadow: var(--shadow); padding:1rem; }
-    .card h3{ margin-top:.25rem; }
-    .tag{ display:inline-flex; align-items:center; padding:.25rem .5rem; border-radius:999px; background: var(--bg-elev); border:1px solid var(--border); font-size:.85rem; color:var(--muted); }
-    .tags{ display:flex; gap:.5rem; flex-wrap: wrap; }
-
-    /* -----------------------------
-       Skills Grid
-    ------------------------------*/
-    .skills{ grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); }
-    .skill{ display:flex; align-items:center; justify-content:space-between; gap:.75rem; padding:.75rem 1rem; }
-
-    /* -----------------------------
-       Projects Grid
-    ------------------------------*/
-    .projects{ grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); }
-    .project-thumb{ height:140px; border-radius:12px; background: linear-gradient(135deg, rgba(14,165,233,.25), rgba(34,197,94,.25)); border:1px solid var(--border); display:grid; place-items:center; color:var(--muted); font-weight:600; margin-bottom:.75rem; }
-    .project-actions{ display:flex; gap:.5rem; flex-wrap:wrap; }
-
-    /* -----------------------------
-       Timeline (Experience)
-    ------------------------------*/
-    .timeline{ position:relative; padding-left:1rem; }
-    .timeline:before{ content:""; position:absolute; top:0; bottom:0; left:8px; width:2px; background: var(--border); }
-    .timeline-item{ position:relative; padding-left:1.25rem; margin-bottom:1.25rem; }
-    .timeline-item:before{ content:""; position:absolute; left:0; top:.4rem; width:14px; height:14px; border-radius:50%; background: var(--primary); box-shadow: 0 0 0 4px rgba(14,165,233,.15); }
-
-    /* -----------------------------
-       Contact Form
-    ------------------------------*/
-    form{ display:grid; gap:.75rem; }
-    input, textarea{ width:100%; padding:.75rem .9rem; border:1px solid var(--border); border-radius:12px; background: var(--bg); color: var(--text); }
-    textarea{ min-height:120px; resize: vertical; }
-
-    /* -----------------------------
-       Footer
-    ------------------------------*/
-    footer{ border-top:1px solid var(--border); padding:2rem 0; }
-    .social{ display:flex; gap:.75rem; align-items:center; }
-    .social a{ display:inline-flex; align-items:center; justify-content:center; width:38px; height:38px; border-radius:10px; border:1px solid var(--border); background: var(--card); }
-    .copyright{ color: var(--muted); font-size:.95rem; }
-
-    /* Animations */
-    .fade-in{ opacity:0; transform: translateY(14px); animation: fadeUp .7s ease forwards; }
-    .fade-in.d2{ animation-delay: .15s; }
-    .fade-in.d3{ animation-delay: .3s; }
-    @keyframes fadeUp{ to{ opacity:1; transform: translateY(0)} }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
 </head>
 <body>
   <!-- ============================
